# proof-of-useful-work

./: .gitignore  .gitmodules  AUTHORS  LICENSE  README.md
bitcoind/: node1.conf
bitcoind-patch/: README  configure.ac  node2.conf  startNodes.sh
bitcoind-patch/src/: .ycm_extra_conf.py  hash.h  miner.cpp  rpcblockchain.cpp
bitcoind-patch/src/primitives/: block.h
bitcoind-patch/src/sgx/: .gitignore  CMakeLists.txt  base64.cpp  base64.h  ocalls.cpp
bitcoind-patch/src/sgx/Common/: Debug.c  Debug.h  Error.h  pouw_defs.h
bitcoind-patch/src/sgx/Enclave/: Enclave.edl  PoUW.cpp
bitcoind-patch/src/sgx/verification/: .ycm_extra_conf.py
bitcoind/src/: Makefile.am  bitcoind.cpp  chain.h  chainparams.cpp  clientversion.cpp  pow.h  rpcmining.cpp
bitcoind/src/sgx/: .ycm_extra_conf.py  Enclave_u.c  Enclave_u.h  Makefile.defs  Utils.cpp  Utils.h  pouw.h
bitcoind/src/sgx/Common/: Log.c
bitcoind/src/sgx/Enclave/: CMakeLists.txt  Enclave_t.h  printf.c
bitcoind/src/sgx/verification/: ias_test.py
bitcoind/src/test/: miner_tests.cpp
libsvm/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  Makefile.defs  heart_scale  lipsum
libsvm/App/: Benchmark.cpp  CMakeLists.txt  Makefile  Utils.h  base64.cpp  benchmarks.h  ocalls.cpp  sha3_test.cpp  svm-predict.cpp  svm_ocalls.cpp  svm_ocalls.h
libsvm/Common/: Debug.h  Log.c  pouw_defs.h  sha3.h
libsvm/Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.edl  Enclave.lds  Makefile  PoUW.cpp  PoUW.h  instrumentation.py  printf.c  printf.h  rand_hardware.h  stub.c  stub.h  svm.cpp
libsvm/Enclave/protein/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  Population.cpp  Population.h
libsvm/native/: Makefile  benchmark.cpp  sha3.c  svm-predict.c
miner-python/: Makefile  bitcoinProxy.py  blkmaker.py  blktemplate.py  example.py  usefulWork.py
miner-python/bitcoinlib/: base58.py
proteinfolding/: CMakeLists.txt  Makefile  Makefile.defs
proteinfolding/App/: App.cpp  Benchmark.cpp  CMakeLists.txt  Makefile  Utils.cpp  Utils.h  ocalls.cpp  ocalls.h
proteinfolding/Common/: Debug.c  blockchain.h  pouw_defs.h  printf.h
proteinfolding/Enclave/: CMakeLists.txt  Enclave.config.xml  Enclave.edl  Makefile  PoUW.cpp  instrumentation.py  printf.c  rand_hardware.cpp  stub.c  stub.h
proteinfolding/Enclave/algorithm/: Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Population.cpp
scripts/: bounded_model.ipynb  brokenCalculations.py  brokenChips.nb  brokenCpuSimulation.py  colors.py  ias_test.py  ias_test_prod.py  markov_chain.py  mc.nb  mc_multirej.nb  micro_sim_brokenchips.py  poet.py  popw.py  pouw-unbounded.py  pouw.py  pow-asic.py  pow.py  powerEstimator.py  revenues.nb  revenues.py  unbounded_model.py  unbouned_model.ipynb
src/: main.cpp  pow.cpp  txdb.cpp
src/primitives/: block.cpp
src/sgx/: pouw.cpp  test.cpp
src/sgx/Common/: Log.h  printf.h
src/sgx/Enclave/: Enclave_t.c
src/sgx/backups/: CMakeLists.txt
src/sgx/verification/: test.cpp
src/test/: test_bitcoin.cpp
static_analysis/: CMakeLists.txt  Makefile  Makefile.defs
static_analysis/App/: App.cpp  CMakeLists.txt  Makefile  Utils.cpp  metadata.h  ocalls.cpp  util_st.h  xmlparser.cpp  xmlparser.h
static_analysis/Common/: pouw_defs.h  printf.h  xml_parameter_t.h
static_analysis/Enclave/: CMakeLists.txt  Enclave.config.xml  Makefile  VerifierEnclave.edl  disassembler.cpp  disassembler.h  main.cpp  measure.cpp  measure.h  printf.c
static_analysis/Enclave/common/inc/internal/: se_event.h  se_lock.hpp  se_stdio.h  se_wrapper.h
static_analysis/Enclave/distorm/: prefix.c
static_analysis/Enclave/parser/: elf_helper.h  elfparser.cpp  elfparser.h  loader.cpp  loader.h  manage_metadata.cpp  manage_metadata.h  metadata.h  parserfactory.cpp  parserfactory.h  util_st.h
